<resources>
    <string name="app_name">CueBit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tagline">"Daily Nudges For a Better You"</string>
    <string name="getStarted">Get Started</string>

    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="Category">Category</string>
    <string name="Date_Time">Date &amp; Time</string>
    <string name="Date">Start Date</string>
    <string name="Time">Time</string>
    <string name="Goal">Goal</string>
    <string name="Frequency">Frequency</string>
    <string name="CreateTask">Set Reminder</string>
    <string name="SetAvatar">Choose Avatar</string>
    <string name="UpdateTask">Update Task</string>
    <string name="add_category">Add Category</string>
    <string name="create_category">Enter Category Name</string>
    <string name="emptyState">Looks like someone’s been busy with nothing! 🚶‍</string>
    <string name="emptyState2">“Your tasks are MIA—Missing In Action! 🕵️‍♀️”</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="delete_title">Are you sure you want to delete this task?</string>


    <string-array name="task_types">
        <item>Tasks</item>
        <item>Habits</item>
    </string-array>

</resources>