<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/delete_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/delete_pop_icon"
        android:layout_gravity="start"
/>

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_title"
        android:fontFamily="@font/plusjakarta_semibold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#242424"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            android:layout_weight="0.5"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/button_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/proceed"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/delete"/>

    </LinearLayout>

</LinearLayout>
