<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditHabitActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create a Habit"
            android:textSize="20sp"
            android:padding="16dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:fontFamily="@font/plusjakarta_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>

            <EditText
                android:id="@+id/habitTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextField"
                android:hint="Enter Title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>
            <EditText
                android:id="@+id/habitDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextField"
                android:hint="Enter Description"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>

            <EditText
                android:id="@+id/habit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextField"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:windowSoftInputMode="stateAlwaysHidden|adjustNothing"
                android:hint="Select Date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>

            <EditText
                android:id="@+id/habit_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextField"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:windowSoftInputMode="stateAlwaysHidden|adjustNothing"
                android:hint="Select Time"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Goal"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>

            <EditText
                android:id="@+id/habit_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextField"
                android:hint="Enter Goal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Frequency"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>

            <Spinner
                android:id="@+id/habitFrequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakarta_medium"
                android:layout_marginTop="10dp"
                android:hint="Select Frequency"/>
        </LinearLayout>

        <TextView
            android:id="@+id/SetReminderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/primary_button"
            android:elevation="4dp"
            android:fontFamily="@font/plusjakarta_bold"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/CreateTask"
            android:textSize="16sp"
            android:textColor="@color/bg_white"
            app:cornerRadius="100dp"/>
    </LinearLayout>


</ScrollView>