<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    tools:context=".EditTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            >

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="63dp"
                android:padding="24dp"
                android:src="@drawable/ic_weekday_chevron_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textViewUpdateTask"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewUpdateTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakarta_bold"
                android:gravity="center"
                android:text="Update Task"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Title"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextField"
                android:hint="Enter Title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Category"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>

            <Spinner
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakarta_medium"
                android:layout_marginTop="10dp"
                android:hint="Select Category"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>
            <EditText
                android:id="@+id/Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextField"
                android:hint="Enter Description"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date_Time"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>

            <EditText
                android:id="@+id/date_and_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextField"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:windowSoftInputMode="stateAlwaysHidden|adjustNothing"
                android:hint="Select Date &amp; Time"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:background="@drawable/editfield_bg"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Frequency"
                android:textSize="18sp"
                android:fontFamily="@font/plusjakarta_semibold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_gravity="center"
                tools:listitem="@layout/frequency_day_item"
                android:padding="8dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/SetReminderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/primary_button"
            android:elevation="4dp"
            android:fontFamily="@font/plusjakarta_bold"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/UpdateTask"
            android:textSize="16sp"
            android:textColor="@color/bg_white"
            app:cornerRadius="100dp"/>
    </LinearLayout>
</ScrollView>
